2002-03-07  H.J. Lu  (hjl@gnu.org)
	* configure.in: Enable gprof for mips*-*-linux*.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50409 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/configure.in
+++ b/gcc-3_1-branch/configure.in
@@ -951,6 +951,9 @@ case "${target}" in
     noconfigdirs="$noconfigdirs gprof ${libgcj}"   # same as generic mips
     target_configdirs="${target_configdirs} target-bsp target-libstub target-cygmon"
    ;;
+  mips*-*-linux*)
+    noconfigdirs="$noconfigdirs target-libffi"
+    ;;
   mips*-*-*)
     noconfigdirs="$noconfigdirs gprof ${libgcj}"
     ;;
