* java/Make-lang.in (JAVA_TARGET_INSTALL_NAME): Define. 	(java.install-common): Link native driver to 	JAVA_TARGET_INSTALL_NAME.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50411 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/Make-lang.in
+++ b/gcc/java/Make-lang.in
@@ -43,6 +43,7 @@
 
 # Actual names to use when installing a native compiler.
 JAVA_INSTALL_NAME = `echo gcj|sed '$(program_transform_name)'`
+JAVA_TARGET_INSTALL_NAME = $(target_alias)-`echo gcj|sed '$(program_transform_name)'`
 
 # Actual names to use when installing a cross-compiler.
 JAVA_CROSS_NAME = `echo gcj|sed '$(program_transform_cross_name)'`
@@ -170,6 +171,8 @@ java.install-common: installdirs
 	    rm -f $(bindir)/$(JAVA_INSTALL_NAME)$(exeext); \
 	    $(INSTALL_PROGRAM) $(GCJ)$(exeext) $(bindir)/$(JAVA_INSTALL_NAME)$(exeext); \
 	    chmod a+x $(bindir)/$(JAVA_INSTALL_NAME)$(exeext); \
+	    rm -f $(bindir)/$(JAVA_TARGET_INSTALL_NAME)$(exeext); \
+	    $(LN) $(bindir)/$(JAVA_INSTALL_NAME)$(exeext) $(bindir)/$(JAVA_TARGET_INSTALL_NAME)$(exeext); \
 	  fi ; \
 	fi ; \
         for tool in $(JAVA_TARGET_INDEPENDENT_BIN_TOOLS); do \
