libjava: 	* configure.in: Define SLOW_PTHREAD_SELF if configure.host set 	slow_pthread_self. Set up symlink for sysdeps directory. 	* configure.host: Document more shell variables. Set sysdeps_dir 	for most platforms. Set slow_pthread_self for i686. Set 	enable_hash_synchronization_default and slow_pthread_self for PowerPC. 	* posix-threads.cc (_Jv_ThreadSelf_out_of_line): Use release_set so 	that memory barrier is emitted where required. 	* include/posix-threads.h (_Jv_ThreadSelf for SLOW_PTHREAD_SELF): Add 	read_barrier() to enforce ordering of reads. 	* sysdep/powerpc/locks.h: New file. Implementation of synchronization 	primitives for PowerPC. 	* sysdep/i386/locks.h: New file. Synchronization primitives for i386 	moved from natObject.cc. 	* sysdep/alpha/locks.h: Likewise. 	* sysdep/ia64/locks.h: Likewise. 	* sysdep/generic/locks.h: Likewise. 	* java/lang/natObject.cc: Move thread synchronization primitives to 	system-dependent headers.
gcc/java:
	* decl.c (java_init_decl_processing): Make sure class_type_node
	alignment is not less than 64 bits if hash synchronization is enabled.

boehm-gc:
	* include/gc_priv.h: Define ALIGN_DOUBLE on 32 bit targets if GCJ
	support is enabled, for hash synchronization.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50518 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/configure.in
+++ b/gcc-3_1-branch/libjava/configure.in
@@ -76,6 +76,12 @@ if test -z "$enable_hash_synchronization"; then
    enable_hash_synchronization=$enable_hash_synchronization_default
 fi
 
+dnl configure.host sets slow_pthread_self if the synchronization code should 
+dnl try to avoid pthread_self calls by caching thread IDs in a hashtable.
+if test "${slow_pthread_self}" = "yes"; then
+  AC_DEFINE(SLOW_PTHREAD_SELF)
+fi
+
 
 dnl See if the user has requested runtime debugging.
 LIBGCJDEBUG="false"
@@ -414,6 +420,8 @@ AC_SUBST(THREADINCS)
 AC_SUBST(THREADDEPS)
 AC_SUBST(THREADOBJS)
 AC_SUBST(THREADSPEC)
+
+AC_LINK_FILES(sysdep/$sysdeps_dir, sysdep)
 
 HASH_SYNC_SPEC=
 # Hash synchronization is only useful with posix threads right now.
