* tree.c (struct type_hash): Use gengtype. 	(init_obstacks): Use canonical name for type_hash_mark. 	(type_hash_mark): Delete. 	Include gt-tree.h. 	* rtl.h (struct mem_attrs): Use gengtype. 	* optabs.h (struct optab): Use gengtype. 	* optabs.c (expand_binop): Squish signed/unsigned warning. 	(mark_optab): Make local, use canonical name, use autogenerated 	marker procedure. 	(init_optabs): Use canonical name for mark_optab. 	* ggc.h: Delete mark_optab prototype. 	* ggc-common.c (ggc_mark_rtx_children): Use canonical name for 	mem_attrs marker procedure. 	* gengtype.c (get_output_file): Include headers in gtype-desc.c 	explicitly rather than deducing them from file names. 	(write_gc_structure_fields): Handle arrays of structures. 	(main): Return non-zero exit code if errors occur during output. 	* emit-rtl.c (mem_attrs_mark): Delete. 	(init_emit_once): Use canonical name for mem_attrs marker procedure. 	* Makefile.in (gtype-desc.o): Explicitly name dependencies. 	(tree.o): Depend on gt-tree.h. 	(GTFILES): Add rtl.h, optabs.h, tree.c. 	(gt-tree.h): Add it to s-gtype rule.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50547 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/pch-branch/gcc/Makefile.in
+++ b/pch-branch/gcc/Makefile.in
@@ -1299,8 +1299,8 @@ dumpvers: dumpvers.c
 
 version.o: version.c version.h
 
-gtype-desc.o: gtype-desc.c varray.h $(RTL_H) $(CONFIG_H) $(SYSTEM_H) \
-	function.h
+gtype-desc.o: gtype-desc.c $(CONFIG_H) $(SYSTEM_H) varray.h $(TREE_H) \
+	$(RTL_H) function.h insn-config.h expr.h $(OPTABS_H) $(GGC_H)
 
 ggc-common.o: ggc-common.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) \
 	flags.h $(GGC_H) varray.h hash.h $(HASHTAB_H) $(TM_P_H)
@@ -1331,7 +1331,8 @@ convert.o: convert.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) flags.h convert.h toplev.
 langhooks.o : langhooks.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) toplev.h \
    tree-inline.h $(RTL_H) insn-config.h integrate.h langhooks.h langhooks-def.h
 tree.o : tree.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) flags.h function.h toplev.h \
-   $(GGC_H) $(HASHTAB_H) $(TARGET_H) output.h $(TM_P_H) langhooks.h
+   $(GGC_H) $(HASHTAB_H) $(TARGET_H) output.h $(TM_P_H) langhooks.h \
+   gt-tree.h
 tree-dump.o: tree-dump.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(C_TREE_H) \
    flags.h langhooks.h toplev.h output.h c-pragma.h $(RTL_H) $(GGC_H) \
    $(EXPR_H) $(SPLAY_TREE_H) tree-dump.h
@@ -1772,13 +1773,13 @@ s-preds: genpreds$(build_exeext) $(srcdir)/move-if-change
 	$(SHELL) $(srcdir)/move-if-change tmp-preds.h tm-preds.h
 	$(STAMP) s-preds
 
-GTFILES = config.h $(build_xm_file_list) $(out_file) \
-  $(srcdir)/function.h \
+GTFILES = config.h \
+  $(srcdir)/function.h  $(srcdir)/rtl.h $(srcdir)/optabs.h \
   $(srcdir)/except.c $(srcdir)/function.c $(srcdir)/integrate.c \
-  $(srcdir)/stmt.c $(srcdir)/varasm.c
+  $(srcdir)/stmt.c $(srcdir)/tree.c $(srcdir)/varasm.c
 
 gtype-desc.h gtype-desc.c gtype-c.h gt-except.h gt-function.h : s-gtype; @true
-gt-integrate.h gt-stmt.h gt-varasm.h : s-gtype; @true
+gt-integrate.h gt-stmt.h gt-tree.h gt-varasm.h : s-gtype; @true
 
 s-gtype: gengtype$(build_exeext) $(GTFILES)
 	./gengtype $(GTFILES)
